Fix an error in the UTF-8 state machine table, and clean up the table generally. Bug 811363, r=jfkthame.